Wed Jun 23 08:58:31 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/ContentFilteredTopic.h:
        * connectors/dds4ccm/impl/dds/ContentFilteredTopic.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_TopicBase_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Update_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Write_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Write_T.cpp:
        * connectors/dds4ccm/impl/dds/DataReaderHandler_T.cpp:
        * connectors/dds4ccm/impl/dds/DataReaderListener.h:
        * connectors/dds4ccm/impl/dds/DataReaderListener.cpp:
        * connectors/dds4ccm/impl/dds/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/dds/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/dds/DataReader_T.h:
        * connectors/dds4ccm/impl/dds/DataReader_T.cpp:
        * connectors/dds4ccm/impl/dds/DataWriter.h:
        * connectors/dds4ccm/impl/dds/DataWriter.cpp:
        * connectors/dds4ccm/impl/dds/DataWriterListener.h:
        * connectors/dds4ccm/impl/dds/DataWriterListener.cpp:
        * connectors/dds4ccm/impl/dds/DomainParticipant.h:
        * connectors/dds4ccm/impl/dds/DomainParticipant.cpp:
        * connectors/dds4ccm/impl/dds/DomainParticipantFactory.h:
        * connectors/dds4ccm/impl/dds/DomainParticipantFactory.cpp:
        * connectors/dds4ccm/impl/dds/DomainParticipantListener_T.cpp:
        * connectors/dds4ccm/impl/dds/Getter_T.cpp:
        * connectors/dds4ccm/impl/dds/InstanceHandleManager_T.h:
        * connectors/dds4ccm/impl/dds/InstanceHandleManager_T.cpp: